# wvf

./: .gitignore  README.md  RELEASE.md  SETUP.md  SPEC.md  create-main-branch.sh  example.wsl  example.wvf  pyproject.toml  system.md
.codey/transcripts/: 000000.json
.github/workflows/: build.yml  create-main-branch.yml  evals.yml  release.yml
agent/: Cargo.toml
agent/src/: main.rs
cli/: .gitignore  Cargo.toml  setup.sh
cli/src/: add.rs  main.rs  validate.rs
evals/: __init__.py  __main__.py  cli.py  config.py  evaluator.py  llm_clients.py  requirements.txt  runner.py  test_cases.py  wsl_prompt.py
evals/read_eval/: runner.py
evals/write_eval/: __init__.py  evaluator.py  runner.py  test_cases.py
spec/: generate.py  grammar.pest  tokens.yaml
validator/: Cargo.toml  build.rs
validator/src/: lib.rs  main.rs  tokens_generated.rs
