[project]
name = "worldview-evals"
version = "0.1.0"
description = "Evaluation framework for Worldview format LLM integration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "litellm>=1.30.0",
    "anthropic>=0.25.0",
    "openai>=1.12.0",
]

[project.scripts]
worldview-evals = "evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
