[package]
name = "worldview-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for working with Worldview format files"
license = "MIT"

[[bin]]
name = "worldview"
path = "src/main.rs"

[dependencies]
# Core agent functionality (vendored, minimal features for library usage)
codey = { path = "vendor/codey", default-features = false }

# Worldview validation
worldview-validator = { path = "../validator" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization for tool schemas
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

[patch.crates-io]
# Use codey's patched genai with thinking block support
genai = { path = "vendor/codey/lib/genai" }
