[package]
name = "wsl-validator"
version = "0.1.0"
edition = "2021"
description = "A validator for Worldview State Language (WSL) files"
license = "MIT"

[lib]
name = "wsl_validator"
path = "src/lib.rs"

[[bin]]
name = "wsl-validate"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
